Correction des ano Sonar