@@ -1,7 +1,10 @@
 package com.ninjamind.conference.config;
 
 import org.hibernate.jpa.HibernatePersistenceProvider;
-import org.springframework.context.annotation.*;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.Environment;
 import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
 import org.springframework.jdbc.datasource.SingleConnectionDataSource;
@@ -39,7 +42,7 @@ public class PersistenceConfig {
         dataSource.setUrl(env.getRequiredProperty(PROPERTY_NAME_DATABASE_URL));
         dataSource.setUsername(env.getRequiredProperty(PROPERTY_NAME_DATABASE_USERNAME));
         dataSource.setPassword(env.getRequiredProperty(PROPERTY_NAME_DATABASE_PASSWORD));
-        dataSource.setSuppressClose(new Boolean(env.getRequiredProperty(PROPERTY_NAME_DATABASE_SUPRESSCLOSE)));
+        dataSource.setSuppressClose(Boolean.valueOf(env.getRequiredProperty(PROPERTY_NAME_DATABASE_SUPRESSCLOSE)));
         return dataSource;
     }
 
